# Production-RAG

./: .gitignore  README.md  embed_vs_chat.py  hybrid-search.py  langsmith-setup.py  learned_skills.txt  main.py  pyproject.toml  redis-compose.yaml  requirements.txt
course/: test_chromadb.py
initial course/: document_loader.py  learned_skills.txt  pyproject.toml
production ready api/: .env.example  dependencies.txt  dev-dependencies.txt
production ready api/app/: agent.py  cache.py  config.py  main.py  models.py  monitoring.py  security.py
production ready api/documentaion/: notes.txt
simple prototype/: embeddings.py  loadAndChunk.py  main.py  requirements.txt
